modified header and ready-block

--- a/index.html
+++ b/index.html
@@ -57,30 +57,33 @@
     <main>
         <section class="ready">
             <div class="ready__container-small">
-                <div class="ready__content">
-                    <h1 class="ready__title">Always<br>Ready to Code.</h1>
-                    <div class="ready__text">Spin up fresh, automated dev environments <br> for each task, in the cloud,
-                        in seconds.</div>
-                    <div class="ready__block-content block-content">
-                        <div class="block-content__button">
-                            <a href="#" target="_blank">Try Now</a>
+                <div class="ready__body">
+                    <div class="ready__content">
+                        <h1 class="ready__title">Always<br>Ready to Code.</h1>
+                        <div class="ready__text">Spin up fresh, automated dev environments <br> for each task, in the
+                            cloud,
+                            in seconds.</div>
+                        <div class="ready__block-content block-content">
+                            <div class="block-content__button">
+                                <a href="#" target="_blank">Try Now</a>
+                            </div>
+                            <div class="block-content__text">Open a workspace.<br>Start from any Git context. </div>
                         </div>
-                        <div class="block-content__text">Open a workspace.<br>Start from any Git context. </div>
+                        <div class="ready__icons">
+                            <a href="#" class="ready__icon" target="_blank">
+                                <img src="image/icon/Gitlab1.svg" alt="GitLab icon">
+                            </a>
+                            <a href="#" class="ready__icon" target="_blank">
+                                <img src="image/icon/Github1.svg" alt="Github icon">
+                            </a>
+                            <a href="#" class="ready__icon" target="_blank">
+                                <img src="image/icon/Bitbucket1.svg" alt="Bitbucket icon">
+                            </a>
+                        </div>
                     </div>
-                    <div class="ready__icons">
-                        <a href="#" class="ready__icon" target="_blank">
-                            <img src="image/icon/Gitlab1.svg" alt="GitLab icon">
-                        </a>
-                        <a href="#" class="ready__icon" target="_blank">
-                            <img src="image/icon/Github1.svg" alt="Github icon">
-                        </a>
-                        <a href="#" class="ready__icon" target="_blank">
-                            <img src="image/icon/Bitbucket1.svg" alt="Bitbucket icon">
-                        </a>
+                    <div class="ready__image">
+                        <img src="image/Ready.jpg" alt="Workplace">
                     </div>
-                </div>
-                <div class="ready__image">
-                    <img src="image/Ready.jpg" alt="Workplace">
                 </div>
                 <div class="ready__subtitle">
                     Select project,<br> <span>check dependencies, checkout branch, view
